--- a/modules/location_api/docker-compose.yml
+++ b/modules/location_api/docker-compose.yml
@@ -2,18 +2,21 @@ version: '3'
 
 services:
   db:
-    image: mongo
+    image: postgis/postgis:14-3.1-alpine
     ports:
-      - "50052:27017"
+      - "60052:5432"
+    volumes:
+      # The default postgis script is -> /docker-entrypoint-initdb.d/10_postgis.sh
+      - ./db/11_init_table.sh:/docker-entrypoint-initdb.d/11_init_table.sh
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
+      POSTGRES_USER: location_api_db_user
+      POSTGRES_PASSWORD: location_api_db_pass
+      POSTGRES_DB: location_api_db
+      LANG: en_US.UTF-8
 
-  server:
+  app:
     build: .
     ports:
-      - "50051:8080"
+      - "60051:8080"
     environment:
-      MONGODB_URI: mongodb://root:root@db:27017
-      MONGODB_DB_NAME: location_api_db
-      MONGODB_DB_COLLECTION_NAME: locations
+      SQLALCHEMY_DATABASE_URI: postgresql://location_api_db_user:location_api_db_pass@db:5432/location_api_db
