--- a/modules/location_api/requirements.dev.txt
+++ b/modules/location_api/requirements.dev.txt
@@ -11,25 +11,31 @@ click==8.0.1              # via black
 colorama==0.4.4           # via click, pytest
 coverage==5.5             # via -r requirements/develop.in
 flake8==3.9.2             # via -r requirements/develop.in
+geoalchemy2==0.9.4        # via -r requirements\common.in
+greenlet==1.1.2           # via sqlalchemy
 grpcio-tools==1.40.0      # via -r requirements\common.in
 grpcio==1.40.0            # via -r requirements\common.in, grpcio-tools
 iniconfig==1.1.1          # via pytest
+marshmallow-sqlalchemy==0.26.1  # via -r requirements\common.in
+marshmallow==3.13.0       # via marshmallow-sqlalchemy
 mccabe==0.6.1             # via flake8
 mypy-extensions==0.4.3    # via black
-packaging==21.0           # via pytest
+packaging==21.0           # via geoalchemy2, pytest
 pathspec==0.9.0           # via black
 platformdirs==2.3.0       # via black
 pluggy==1.0.0             # via pytest
 protobuf==3.17.3          # via grpcio-tools
+psycopg2-binary==2.9.1    # via -r requirements\common.in
 py==1.10.0                # via pytest
 pycodestyle==2.7.0        # via flake8
 pyflakes==2.3.1           # via flake8
-pymongo==3.12.0           # via -r requirements\common.in
 pyparsing==2.4.7          # via packaging
 pytest==6.2.5             # via -r requirements/develop.in
 python-dotenv==0.19.0     # via -r requirements\common.in
 regex==2021.8.28          # via black
+shapely==1.7.1            # via -r requirements\common.in
 six==1.16.0               # via grpcio, protobuf
+sqlalchemy==1.4.25        # via -r requirements\common.in, geoalchemy2, marshmallow-sqlalchemy
 toml==0.10.2              # via pytest
 tomli==1.2.1              # via black
 typing-extensions==3.10.0.2  # via black
