--- a/deployment/udaconnect-app.yaml
+++ b/deployment/udaconnect-app.yaml
@@ -6,10 +6,9 @@ metadata:
   name: udaconnect-app
 spec:
   ports:
-  - name: "3000"
-    port: 3000
-    targetPort: 3000
-    nodePort: 30000
+    - name: "app-port"
+      port: 80
+      nodePort: 30000
   selector:
     service: udaconnect-app
   type: NodePort
@@ -31,14 +30,25 @@ spec:
         service: udaconnect-app
     spec:
       containers:
-      - image: udacity/nd064-udaconnect-app:latest
-        name: udaconnect-app
-        imagePullPolicy: Always
-        resources:
-          requests:
-            memory: "128Mi"
-            cpu: "64m"
-          limits:
-            memory: "256Mi"
-            cpu: "256m"
+        - image: minorpatch/udaconnect-app
+          name: udaconnect-app
+          imagePullPolicy: Always
+          env:
+            - name: REACT_APP_PERSON_API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: micro-env
+                  key: PERSON_API_ENDPOINT
+            - name: REACT_APP_CONNECTION_API_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: micro-env
+                  key: LOCATION_API_ENDPOINT
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "64m"
+            limits:
+              memory: "256Mi"
+              cpu: "256m"
       restartPolicy: Always
