--- a/modules/frontend/Dockerfile
+++ b/modules/frontend/Dockerfile
@@ -1,17 +1,15 @@
-FROM node:14.8.0-alpine3.12
+FROM node:14-alpine as builder
+ARG REACT_APP_PERSON_API_URL
+ARG REACT_APP_CONNECTION_API_URL
+ENV REACT_APP_PERSON_API_URL=$REACT_APP_PERSON_API_URL
+ENV REACT_APP_CONNECTION_API_URL=$REACT_APP_CONNECTION_API_URL
+WORKDIR /app
+COPY package*.json .
+RUN npm ci --production
+COPY . .
+RUN npm run build
 
-WORKDIR .
-
-COPY package.json ./
-COPY package-lock.json ./
-
-RUN npm install
-RUN npm install react-scripts@3.4.3 -g
-
-CMD ["pwd"]
-COPY . ./
-
-EXPOSE 3000
-
-CMD ["npm", "start"]
-
+FROM nginx:alpine
+COPY --from=builder /app/build /usr/share/nginx/html
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
