--- a/modules/person_api/requirements.txt
+++ b/modules/person_api/requirements.txt
@@ -36,6 +36,8 @@ jinja2==3.0.1
     # via flask
 jsonschema==3.2.0
     # via flask-restx
+kafka-python==2.0.2
+    # via -r requirements\common.in
 markupsafe==2.0.1
     # via jinja2
 marshmallow==3.13.0
