--- a/deployment/broker.yaml
+++ b/deployment/broker.yaml
@@ -2,35 +2,35 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service: kafka
-  name: kafka
+    service: broker
+  name: broker
 spec:
   ports:
     - name: "zookeeper-server-port"
       port: 2181
-      nodePort: 31001
+      nodePort: 30010
     - name: "broker-server-port"
       port: 29092
-      nodePort: 31002
+      nodePort: 30020
   selector:
-    service: kafka
+    service: broker
   type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    service: kafka
-  name: kafka
+    service: broker
+  name: broker
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: kafka
+      service: broker
   template:
     metadata:
       labels:
-        service: kafka
+        service: broker
     spec:
       containers:
         - image: confluentinc/cp-zookeeper:6.2.1
