--- a/deployment/micro-configmap.yaml
+++ b/deployment/micro-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  PERSON_API_ENDPOINT: "http://127.0.0.1:30050"
-  LOCATION_API_ENDPOINT: "127.0.0.1:30060"
-  KAFKA_SERVER: "kafka:29092"
+  PERSON_API_ENDPOINT: "http://udaconnect-person-api:30050"
+  LOCATION_API_ENDPOINT: "udaconnect-location-api:30060"
+  KAFKA_SERVER: "broker:29092"
 metadata:
   name: micro-env
